Added new notebook files

--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -174,9 +174,9 @@
     "#\n",
     "### Uncomment Gitpod specific\n",
     "#\n",
-    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_GITPOD')\n",
-    "# MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_GITPOD')\n",
-    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
+    "MY_YB_PATH=os.environ.get('MY_YB_PATH_GITPOD')\n",
+    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_GITPOD')\n",
+    "MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
     "#\n",
     "### Comment out Local \n",
     "#\n",
@@ -202,7 +202,7 @@
     "MY_NOTEBOOK_DATA_FOLDER=MY_NOTEBOOK_DIR +'/data'\n",
     "MY_NOTEBOOK_UTILS_FOLDER=MY_NOTEBOOK_DIR + '/utils'\n",
     "\n",
-    "# Files\n",
+    "# Data files\n",
     "MY_DATA_DDL_FILE_0=os.environ.get(\"MY_DATA_DDL_FILE_0\")\n",
     "MY_DATA_DML_FILE_0=os.environ.get(\"MY_DATA_DML_FILE_0\")\n",
     "MY_DATA_DDL_FILE_1=os.environ.get(\"MY_DATA_DDL_FILE_1\")\n",
@@ -211,6 +211,12 @@
     "MY_DATA_DML_FILE_2=os.environ.get(\"MY_DATA_DML_FILE_2\")\n",
     "MY_DATA_DDL_FILE_3=os.environ.get(\"MY_DATA_DDL_FILE_3\")\n",
     "MY_DATA_DML_FILE_3=os.environ.get(\"MY_DATA_DML_FILE_3\")\n",
+    "\n",
+    "MY_JEOPARDY_DATA_FILE=os.environ.get(\"MY_JEOPARDY_DATA_FILE\")\n",
+    "MY_GIN_EXAMPLES=os.environ.get(\"MY_GIN_EXAMPLES\")\n",
+    "MY_GITHUB_DATA_FILE=os.environ.get(\"MY_GITHUB_DATA_FILE\")\n",
+    "\n",
+    "# Util files\n",
     "MY_UTIL_FUNCTIONS_FILE=os.environ.get(\"MY_UTIL_FUNCTIONS_FILE\")\n",
     "MY_UTIL_YBTSERVER_METRICS_FILE=os.environ.get(\"MY_UTIL_YBTSERVER_METRICS_FILE\")\n",
     "\n",
@@ -238,6 +244,11 @@
     "%store MY_DATA_DML_FILE_2\n",
     "%store MY_DATA_DDL_FILE_3\n",
     "%store MY_DATA_DML_FILE_3\n",
+    "\n",
+    "\n",
+    "%store MY_JEOPARDY_DATA_FILE\n",
+    "%store MY_GIN_EXAMPLES\n",
+    "%store MY_GITHUB_DATA_FILE\n",
     "\n",
     "%store MY_UTIL_FUNCTIONS_FILE\n",
     "%store MY_UTIL_YBTSERVER_METRICS_FILE"
