--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -692,10 +692,10 @@
     "from tbl_pk_hash\n",
     "where 1=1 \n",
     "-- and k=123\n",
-    "-- order by k asc\n",
+    "order by k asc\n",
     "-- order by k desc\n",
     "-- offset 330\n",
-    "offset 660\n",
+    "-- offset 660\n",
     "limit 30\n",
     ";\n"
    ]
@@ -709,12 +709,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "##### q2a | Experiment\n",
     "Question: \n",
-    "- In the query cell above, comment out the `order by k` line. Rerun the query cell. What new observations can you make about the results?\n",
+    "- In the query cell above, comment out the `order by k asc` line. Rerun the query cell. What new observations can you make about the results?\n",
     "\n",
     "Answer:\n",
     "- The results are in the order of `k_hash_code`, not `k`.\n",
@@ -1582,11 +1583,16 @@
     "- Hash Sharding\n",
     "- Range Sharding\n",
     "- Comparing hash and range sharding\n",
-    "- Summary\n",
-    "\n",
-    "\n",
+    "- Summary"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 😊 Next up!\n",
-    "Continue your learning by opening the next notebook, `04_YSQL_Development_Advanced.ipynb`. \n",
+    "Continue your learning by opening the next notebook, `04_Anatomy_of_an_Index.ipynb`. \n",
     "\n",
     "Or, to open the notebook from GitPod, run the following:"
    ]
@@ -1602,7 +1608,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "gp open '04_YSQL_Development_Advanced.ipynb'"
+    "gp open `04_Anatomy_of_an_Index.ipynb`"
    ]
   }
  ],
