--- a/02_YSQL_Development.ipynb
+++ b/02_YSQL_Development.ipynb
@@ -1763,7 +1763,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "sql"
+     "languageId": "shellscript"
     }
    },
    "outputs": [],
