updates for may 10

--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -13,23 +13,34 @@
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
     "> Enroll for free  [Yugabyte University](https://university.yugabyte.com/).\n",
-    ">\n",
-    "\n",
-    "# Introduction\n",
+    ">"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# About these notebook Labs\n",
     "The labs for this course consists of several Jupyter notebooks that run in Gitpod. [Gitpod](https://www.gitpod.io/) facilitates runtime environments using Ubuntu and VS Code in a Chromium (browser) environment. \n",
     "\n",
     "A Gitpod instance belongs to your Gitpod workspace. The instance automatically runs a three node, YugabyteDB database cluster. YugabyteDB is the world's #1 open source, distributed SQL database. \n",
     "\n",
     "> Although a three node cluster is up and running, Gitpod does not support visiting loopback addresses over a web ui, even if exposed on a different port.\n",
     "> 127.0.0.1 is the only web user interface that is exposed. To see all available ports in Gitpod, in the Terminal tab, you can run `gp ports list`.\n",
-    "> \n",
-    "\n",
+    "> "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 🛠️ Requirements\n",
     "Here are the requirements for this lab:\n",
     "- ✅ Launch using this Gitpod workspace, which you are already doing\n",
     "- ✅ A running, 3 node YugabyteDB cluster, which is already running\n",
     "- ☑️ A Python 3.8.13 or higher kernel for the notebook, *which you need to select right now!!!*\n",
-    "\n",
     "\n",
     "### Select your notebook kernel\n",
     "- In the Notebook toolbar, click **Select Kernel**.\n",
@@ -40,7 +51,7 @@
     "<br>\n",
     "<img width=50% src=\"assets/01_02_Select_Kernel_Dropdown.png\" />\n",
     "\n",
-    "That's it!\n"
+    "That's it!"
    ]
   },
   {
@@ -96,13 +107,22 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ⛑️ Getting help\n",
+    "The best way to get help from the Yugabyte University team is to post your question on YugabyteDB Community Slack in the #training or #yb-university channels. To sign up, visit [https://communityinviter.com/apps/yugabyte-db/register](https://communityinviter.com/apps/yugabyte-db/register)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false
    },
    "source": [
     "---\n",
-    "## 👣 Setup steps\n",
+    "# 👣 Setup steps\n",
     "Here are the steps to setup this lab:\n",
     "- Install missing dependencies and restart the notebook\n",
     "- Create the notebook variables\n",
@@ -110,6 +130,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,6 +154,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -263,7 +285,7 @@
    },
    "source": [
     "---\n",
-    "## Connect to YugabyteDB with `ysqlsh`, YSQL shell, and create the database\n",
+    "# Connect to YugabyteDB with `ysqlsh`, YSQL shell, and create the database\n",
     "The following commands are YSQL shell commands. Using `ysqlsh`, you can execute YSQL statements.\n",
     "\n",
     "Run the following cell to connect to the local host using `ysqlsh`, create the `db_ybu` database, and then list the databases."
@@ -295,6 +317,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -350,6 +373,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -390,6 +414,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -433,10 +458,11 @@
     "sleep 1;\n",
     "\n",
     "# Describe relations\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d\""
+    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d public.*\""
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -476,6 +502,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -512,6 +539,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -536,6 +564,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Optional."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -545,6 +581,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
