--- a/06_YSQL_Development_Advanced.ipynb
+++ b/06_YSQL_Development_Advanced.ipynb
@@ -49,6 +49,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,7 +69,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n",
     "# Use %store -r to read 01_Lab_Requirements_Setup variables\n",
     "%store -r MY_DB_NAME\n",
     "%store -r MY_YB_PATH\n",
@@ -95,6 +95,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -106,6 +107,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,6 +134,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -151,6 +154,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -158,6 +162,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,6 +191,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,6 +256,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -351,6 +358,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,12 +373,18 @@
    "outputs": [],
    "source": [
     "#%% python, but prepared statements as sql magic\n",
-    "#THIS_TABLE_NAME='tbl_order_changes'\n",
+    "# THIS_TABLE_NAME='tbl_order_changes'\n",
     "THIS_TABLE_NAME='tbl_order_changes_prtn_2023_01'\n",
-    "WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
-    "view_url = %sql select fn_get_table_id(:WORKSPACE_URL,8200,:THIS_TABLE_NAME) as open_this_url_in_your_web_browser ;\n",
+    "THIS_SCHEMA_NAME = 'public'\n",
+    "DB_NAME = MY_DB_NAME\n",
     "\n",
-    "print (view_url)"
+    "## Comment out if local\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
+    "print (view_gitpod_url)\n",
+    "\n",
+    "## Uncomment if local\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
+    "# print (view_local_url)"
    ]
   },
   {
@@ -491,10 +505,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Indexed Relations\n",
+    "### q2 | Indexed Relations\n",
     "\n",
     "By creating an index on the partitioned or parent table, a matching index is also created on any partitions that exist now or in the future. An index or unique constraint declared on a partitioned table is “virtual” in the same way that the partitioned table is: the actual data is in child indexes on the individual partition tables."
    ]
@@ -574,7 +589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See the metrics related to this query that uses the index."
+    "the '`idx` prefix is at the end of the index name for the table partition. See the metrics related to this query that uses the index."
    ]
   },
   {
@@ -694,10 +709,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tablespaces"
+    "## q3 | Tablespaces"
    ]
   },
   {
@@ -715,6 +731,36 @@
     "- `cloud3.region3.zone3`\n",
     "  \n",
     "The definition of tablespace must align with placement black names in the cluster.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can view the placement blocks per table. You can also see the placement blocks using the YB-Master UI."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print (MY_YB_MASTER_HOST_GITPOD_URL)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Masters**\n",
+    "|Server|RAFT Role|Uptime|Details|\n",
+    "|-|-|-|-|\n",
+    "|127.0.0.1:7000|\tLEADER|\t17:48:54|CLOUD: cloud1<br>REGION: region1<br>ZONE: zone1<br>UUID: 0d97797eb98b4327a9f0b0c8c8021dc2|\n",
+    "|127.0.0.2:7000|FOLLOWER|17:48:54|CLOUD: cloud2<br>REGION: region2<br>ZONE: zone2<br>UUID: a2576e3f7f324083bb9fdc1dd05e73d6|\n",
+    "|127.0.0.3:7000|\tFOLLOWER|\t17:48:54|CLOUD: cloud3<br>REGION: region3<br>ZONE: zone3<br>UUID: 24df5c170f664b5b91072b9f1f6708d9|\n"
    ]
   },
   {
@@ -764,7 +810,7 @@
     "#       \"cloud\": \"cloud1\", \"region\": \"region1\", \"zone\": \"zone1\", \"min_num_replicas\": 1}]\n",
     "#   }'\n",
     "# );\n",
-    "DDL_TABLESPACE_US=\"drop tablespace if exists tblspace_us; create tablespace tblspace_us with (replica_placement='{\"\\\"num_replicas\"\\\": 3, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region1\"\\\", \"\\\"zone\"\\\": \"\\\"zone1\"\\\", \"\\\"min_num_replicas\"\\\": 1},{ \"\\\"cloud\"\\\": \"\\\"cloud2\"\\\", \"\\\"region\"\\\": \"\\\"region2\"\\\", \"\\\"zone\"\\\": \"\\\"zone2\"\\\", \"\\\"min_num_replicas\"\\\": 1},{ \"\\\"cloud\"\\\": \"\\\"cloud3\"\\\", \"\\\"region\"\\\": \"\\\"region3\"\\\", \"\\\"zone\"\\\": \"\\\"zone3\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
+    "DDL_TABLESPACE_US=\"drop tablespace if exists tblspace_us; create tablespace tblspace_us with (replica_placement='{\"\\\"num_replicas\"\\\": 1, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region1\"\\\", \"\\\"zone\"\\\": \"\\\"zone1\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
     "\n",
     "echo $DDL_TABLESPACE_US | ./bin/ysqlsh -d ${DB_NAME}\n",
     "\n",
@@ -798,7 +844,7 @@
     "#  can't do with sql magic \n",
     "# needs double quote esacpe for bash because of JSON\n",
     "\n",
-    "DDL_TABLESPACE_EU=\"drop tablespace if exists tblspace_eu; create tablespace tblspace_eu with (replica_placement='{\"\\\"num_replicas\"\\\": 3, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region1\"\\\", \"\\\"zone\"\\\": \"\\\"zone1\"\\\", \"\\\"min_num_replicas\"\\\": 1},{ \"\\\"cloud\"\\\": \"\\\"cloud2\"\\\", \"\\\"region\"\\\": \"\\\"region2\"\\\", \"\\\"zone\"\\\": \"\\\"zone2\"\\\", \"\\\"min_num_replicas\"\\\": 1},{ \"\\\"cloud\"\\\": \"\\\"cloud3\"\\\", \"\\\"region\"\\\": \"\\\"region3\"\\\", \"\\\"zone\"\\\": \"\\\"zone3\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
+    "DDL_TABLESPACE_EU=\"drop tablespace if exists tblspace_eu; create tablespace tblspace_eu with (replica_placement='{\"\\\"num_replicas\"\\\": 1, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud2\"\\\", \"\\\"region\"\\\": \"\\\"region2\"\\\", \"\\\"zone\"\\\": \"\\\"zone2\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
     "\n",
     "echo $DDL_TABLESPACE_EU | ./bin/ysqlsh -d ${DB_NAME}\n",
     "\n",
@@ -832,7 +878,7 @@
     "#  can't do with sql magic \n",
     "# needs double quote esacpe for bash because of JSON\n",
     "\n",
-    "DDL_TABLESPACE_AP=\"drop tablespace if exists tblspace_ap; create tablespace tblspace_ap with (replica_placement='{\"\\\"num_replicas\"\\\": 3, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region1\"\\\", \"\\\"zone\"\\\": \"\\\"zone1\"\\\", \"\\\"min_num_replicas\"\\\": 1},{ \"\\\"cloud\"\\\": \"\\\"cloud2\"\\\", \"\\\"region\"\\\": \"\\\"region2\"\\\", \"\\\"zone\"\\\": \"\\\"zone2\"\\\", \"\\\"min_num_replicas\"\\\": 1},{ \"\\\"cloud\"\\\": \"\\\"cloud3\"\\\", \"\\\"region\"\\\": \"\\\"region3\"\\\", \"\\\"zone\"\\\": \"\\\"zone3\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
+    "DDL_TABLESPACE_AP=\"drop tablespace if exists tblspace_ap; create tablespace tblspace_ap with (replica_placement='{\"\\\"num_replicas\"\\\": 1, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud3\"\\\", \"\\\"region\"\\\": \"\\\"region3\"\\\", \"\\\"zone\"\\\": \"\\\"zone3\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
     "\n",
     "echo $DDL_TABLESPACE_AP | ./bin/ysqlsh -d ${DB_NAME}\n",
     "\n",
@@ -860,10 +906,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create Table Partitions\n",
+    "#### q3a | Create Table Partitions\n",
     "\n",
     "The partitions will determine the which rows are included with the value from `geo_location`. Since the partitioned table has the Partition property by LIST, not RANGE, only rows that contain the LIST value will be assigned to a partition."
    ]
@@ -988,17 +1035,31 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View the table in the YB-Master Web Ui."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#%% python, but prepared statements as sql magic\n",
-    "THIS_TABLE_NAME='tbl_transactions'\n",
-    "WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
-    "view_url = %sql select fn_get_table_id(:WORKSPACE_URL,8200,:THIS_TABLE_NAME) as open_this_url_in_your_web_browser ;\n",
+    "THIS_TABLE_NAME = 'tbl_transactions'\n",
+    "THIS_SCHEMA_NAME = 'public'\n",
+    "DB_NAME = MY_DB_NAME\n",
     "\n",
-    "print (view_url)"
+    "## Comment out if local\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
+    "print (view_gitpod_url)\n",
+    "\n",
+    "## Uncomment if local\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
+    "# print (view_local_url)"
    ]
   },
   {
@@ -1006,7 +1067,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Add records to the transactions table\n",
+    "#### q3b | Add records to the transactions table\n",
     "Data localization also has a role in performance as well. Keeping the data source closer to the client will reduce network latency, improving the response time of the database. Having an understanding of what data is needed where coupled with the ability to place data in particular location is an important tool in distributed sql systems."
    ]
   },
@@ -1031,7 +1092,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Verify the inserts for AP."
+    "Verify the inserts for AP. Every table contains the `tableoid` system column. `tableoid` is the `oid` (object identifier) of the table to which the row belongs. While querying a partitioned table, the tableoid column returns the oid of the partition to which the row belongs. Using the `regclass` type, you can view the the name of the object."
    ]
   },
   {
@@ -1046,6 +1107,7 @@
    "source": [
     "%%sql\n",
     "select '' _\n",
+    "  , tableoid\n",
     "  , tableoid::regclass\n",
     "  , user_id\n",
     "  , account_id\n",
@@ -1059,10 +1121,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### View the explain plan and metrics\n",
+    "##### View the explain plan and metrics\n",
     "\n",
     "In this example, we are using Object Identifiers to locate the partition table that is associated with the row of data."
    ]
@@ -1087,7 +1150,7 @@
     "  , geo_partition\n",
     "from tbl_transactions\n",
     "where 1=1 \n",
-    "  and user_id = 1\n",
+    "  -- and user_id = 1\n",
     "  and geo_partition = 'US'\n",
     "-- and user_id = 2\n",
     "-- and geo_partition = 'EU'\n",
@@ -1117,6 +1180,199 @@
    "source": [
     "%%sql\n",
     "execute stmt_util_metrics_snap_table;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### q3c | Built-in Geo-partitioning helper functions\n",
+    "With built-in functions for geo-partitioning, you can simplify reads and writes.\n",
+    "\n",
+    "|FUNCTION\t|RETURN TYPE|\tDESCRIPTION|\n",
+    "|-|-|-|\n",
+    "|`yb_is_local_table(oid)`|\t`boolean`|\tReturns whether the given `oid` is a table replicated only in the local region|\n",
+    "|`yb_server_region()`|\t`varchar`|\tReturns the region of the currently connected node|\n",
+    "|`yb_server_zone()`|\t`varchar`|\tReturns the zone of the currently connected node|\n",
+    "|`yb_server_cloud()`|\t`varchar`|\tReturns the cloud provider of the currently connected node|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "show listen_addresses;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "select yb_server_region(), yb_server_zone(),yb_server_cloud(), tableoid::regclass, *\n",
+    "from tbl_transactions\n",
+    "where 1=1 \n",
+    "and yb_is_local_table(tableoid)\n",
+    "limit 1;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View the query plan. This will show `Filter: yb_is_local_table(tableoid)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql /* explain plan */\n",
+    "\n",
+    "explain (costs off) \n",
+    "select '' _\n",
+    "  , tableoid::regclass\n",
+    "  , user_id\n",
+    "  , account_id\n",
+    "  , geo_partition\n",
+    "from tbl_transactions\n",
+    "where 1=1 \n",
+    " --  and user_id = 1\n",
+    "  -- and geo_partition = 'US'\n",
+    "-- and user_id = 2\n",
+    "-- and geo_partition = 'EU'\n",
+    "-- and user_id = 3\n",
+    "-- and geo_partition = 'AP'\n",
+    "and yb_is_local_table(tableoid)\n",
+    "limit 10\n",
+    ";"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can use this function to show any object in the associated tablespaces."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "select oid, relname from pg_class where yb_is_local_table(oid);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change the host and reload the extension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# connect use Python 3.7.9+\n",
+    "db_host=MY_HOST_IPv4_02\n",
+    "# db_host=MY_HOST_IPv4_03\n",
+    "db_name=MY_DB_NAME\n",
+    "\n",
+    "connection_str='postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reload_ext sql\n",
+    "%sql {connection_str}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NEW_HOST = %sql show listen_addresses;\n",
+    "print (NEW_HOST)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View the geo-partitioning related functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "select yb_server_region(), yb_server_zone(),yb_server_cloud(), tableoid::regclass, *\n",
+    "from tbl_transactions\n",
+    "where 1=1 \n",
+    "limit 1;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rerun the query."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To learn more about the `yb_is_local_table` built-in function, check out:\n",
+    "- [Docs --> yb_is_local_table](https://docs.yugabyte.com/preview/api/ysql/exprs/geo_partitioning_helper_functions/func_yb_is_local_table/)"
    ]
   },
   {
