--- a/00_Local_Only_Setup_MacOS.ipynb
+++ b/00_Local_Only_Setup_MacOS.ipynb
@@ -90,9 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'MY_SUDO' (str)\n",
+      "Stored 'MY_DB_NAME' (str)\n",
+      "Stored 'MY_YB_PATH' (str)\n",
+      "Stored 'MY_HOST_IPv4_01' (str)\n",
+      "Stored 'MY_HOST_IPv4_02' (str)\n",
+      "Stored 'MY_HOST_IPv4_03' (str)\n",
+      "Stored 'MY_TSERVER_WEBSERVER_PORT' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "# Env variables for Notebook\n",
     "import os\n",
@@ -122,24 +136,11 @@
     "# Create and assign notebook variables\n",
     "# env_vars defines the following\n",
     "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
-    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_GITPOD')\n",
     "MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
-    "MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
-    "\n",
     "MY_HOST_IPv4_01=os.environ.get('MY_HOST_IPv4_01')\n",
     "MY_HOST_IPv4_02=os.environ.get('MY_HOST_IPv4_02')\n",
     "MY_HOST_IPv4_03=os.environ.get('MY_HOST_IPv4_03')\n",
     "MY_TSERVER_WEBSERVER_PORT=os.environ.get('MY_TSERVER_WEBSERVER_PORT')\n",
-    "MY_DATA_DDL_FILE_1=os.environ.get(\"MY_DATA_DDL_FILE_1\")\n",
-    "MY_DATA_DML_FILE_1=os.environ.get(\"MY_DATA_DML_FILE_1\")\n",
-    "MY_UTIL_FUNCTIONS_FILE=os.environ.get(\"MY_UTIL_FUNCTIONS_FILE\")\n",
-    "MY_UTIL_YBTSERVER_METRICS_FILE=os.environ.get(\"MY_UTIL_YBTSERVER_METRICS_FILE\")\n",
-    "# Current directory of project and related child folders\n",
-    "\n",
-    "MY_NOTEBOOK_DIR=os.getcwd()\n",
-    "MY_NOTEBOOK_DATA_FOLDER=MY_NOTEBOOK_DIR +'/data'\n",
-    "\n",
-    "MY_NOTEBOOK_UTILS_FOLDER=MY_NOTEBOOK_DIR + '/utils'\n",
     "\n",
     "# Store the note book values for other notebooks to use\n",
     "%store MY_SUDO\n",
@@ -148,14 +149,7 @@
     "%store MY_HOST_IPv4_01\n",
     "%store MY_HOST_IPv4_02\n",
     "%store MY_HOST_IPv4_03\n",
-    "%store MY_NOTEBOOK_DIR\n",
-    "%store MY_TSERVER_WEBSERVER_PORT\n",
-    "%store MY_NOTEBOOK_DATA_FOLDER\n",
-    "%store MY_NOTEBOOK_UTILS_FOLDER\n",
-    "%store MY_DATA_DDL_FILE_1\n",
-    "%store MY_DATA_DML_FILE_1\n",
-    "%store MY_UTIL_FUNCTIONS_FILE\n",
-    "%store MY_UTIL_YBTSERVER_METRICS_FILE"
+    "%store MY_TSERVER_WEBSERVER_PORT"
    ]
   },
   {
@@ -179,13 +173,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lo0: flags=8049<UP,LOOPBACK,RUNNING,MULTICAST> mtu 16384\n",
+      "\toptions=1203<RXCSUM,TXCSUM,TXSTATUS,SW_TIMESTAMP>\n",
+      "\tinet 127.0.0.1 netmask 0xff000000 \n",
+      "\tinet6 ::1 prefixlen 128 \n",
+      "\tinet6 fe80::1%lo0 prefixlen 64 scopeid 0x1 \n",
+      "\tinet 127.0.0.2 netmask 0xff000000 \n",
+      "\tinet 127.0.0.3 netmask 0xff000000 \n",
+      "\tinet 127.0.0.4 netmask 0xff000000 \n",
+      "\tinet 127.0.0.5 netmask 0xff000000 \n",
+      "\tinet 127.0.0.6 netmask 0xff000000 \n",
+      "\tinet 127.0.0.7 netmask 0xff000000 \n",
+      "\tnd6 options=201<PERFORMNUD,DAD>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Password:"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_SUDO\"  # ifconfig aliases\n",
     "MY_SUDO=${1}\n",
@@ -211,6 +231,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -221,13 +242,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Destroying cluster.\n",
+      "Creating cluster.\n",
+      "Waiting for cluster to be ready.\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node Count: 3 | Replication Factor: 3                                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.1:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh                                                                 |\n",
+      "| YCQL Shell          : bin/ycqlsh                                                                 |\n",
+      "| YEDIS Shell         : bin/redis-cli                                                              |\n",
+      "| Web UI              : http://127.0.0.1:7000/                                                     |\n",
+      "| Cluster Data        : /Users/seth/yugabyte-data                                                  |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "For more info, please use: yb-ctl status\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node Count: 3 | Replication Factor: 3                                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.1:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh                                                                 |\n",
+      "| YCQL Shell          : bin/ycqlsh                                                                 |\n",
+      "| YEDIS Shell         : bin/redis-cli                                                              |\n",
+      "| Web UI              : http://127.0.0.1:7000/                                                     |\n",
+      "| Cluster Data        : /Users/seth/yugabyte-data                                                  |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node 1: yb-tserver (pid 12116), yb-master (pid 12107)                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.1:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh                                                                 |\n",
+      "| YCQL Shell          : bin/ycqlsh                                                                 |\n",
+      "| YEDIS Shell         : bin/redis-cli                                                              |\n",
+      "| data-dir[0]         : /Users/seth/yugabyte-data/node-1/disk-1/yb-data                            |\n",
+      "| yb-tserver Logs     : /Users/seth/yugabyte-data/node-1/disk-1/yb-data/tserver/logs               |\n",
+      "| yb-master Logs      : /Users/seth/yugabyte-data/node-1/disk-1/yb-data/master/logs                |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node 2: yb-tserver (pid 12119), yb-master (pid 12110)                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.2:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh -h 127.0.0.2                                                    |\n",
+      "| YCQL Shell          : bin/ycqlsh 127.0.0.2                                                       |\n",
+      "| YEDIS Shell         : bin/redis-cli -h 127.0.0.2                                                 |\n",
+      "| data-dir[0]         : /Users/seth/yugabyte-data/node-2/disk-1/yb-data                            |\n",
+      "| yb-tserver Logs     : /Users/seth/yugabyte-data/node-2/disk-1/yb-data/tserver/logs               |\n",
+      "| yb-master Logs      : /Users/seth/yugabyte-data/node-2/disk-1/yb-data/master/logs                |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node 3: yb-tserver (pid 12122), yb-master (pid 12113)                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.3:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh -h 127.0.0.3                                                    |\n",
+      "| YCQL Shell          : bin/ycqlsh 127.0.0.3                                                       |\n",
+      "| YEDIS Shell         : bin/redis-cli -h 127.0.0.3                                                 |\n",
+      "| data-dir[0]         : /Users/seth/yugabyte-data/node-3/disk-1/yb-data                            |\n",
+      "| yb-tserver Logs     : /Users/seth/yugabyte-data/node-3/disk-1/yb-data/tserver/logs               |\n",
+      "| yb-master Logs      : /Users/seth/yugabyte-data/node-3/disk-1/yb-data/master/logs                |\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_TSERVER_WEBSERVER_PORT\"  # yb-ctl create\n",
     "YB_PATH=${1}\n",
@@ -284,13 +370,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " cql_version\n",
+      "-------------\n",
+      "       3.4.2\n",
+      "\n",
+      "(1 rows)\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_TSERVER_WEBSERVER_PORT\"  # yb-ctl create\n",
     "YB_PATH=${1}\n",
@@ -298,11 +397,10 @@
     "\n",
     "cd $YB_PATH\n",
     "\n",
-    "\n",
-    "# Output status\n",
+    "# select version\n",
     "./bin/ycqlsh -e \"\n",
     "  select cql_version from system.local;\n",
-    "\"  "
+    "  \"  "
    ]
   },
   {
@@ -315,13 +413,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                             version                                                              \n",
+      "----------------------------------------------------------------------------------------------------------------------------------\n",
+      " PostgreSQL 11.2-YB-2.17.3.0-b0 on x86_64-apple-darwin20.6.0, compiled by Apple clang version 13.0.0 (clang-1300.0.29.30), 64-bit\n",
+      "(1 row)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # create database\n",
     "YB_PATH=${1}\n",
@@ -329,12 +439,10 @@
     "\n",
     "cd $YB_PATH\n",
     "\n",
-    "# drop and create\n",
-    "./bin/ysqlsh -d yugabyte -c \"drop database if exists \"${DB_NAME}\";\"  \n",
-    "./bin/ysqlsh -d yugabyte -c \"create database \"${DB_NAME}\";\" \n",
-    "\n",
-    "# list dbs\n",
-    "./bin/ysqlsh -d yugabyte -c \"\\l\""
+    "# select version\n",
+    "./bin/ysqlsh -d yugabyte -c \"\n",
+    "   select version();\n",
+    "\"  "
    ]
   },
   {
@@ -344,7 +452,7 @@
    "source": [
     "---\n",
     "# 🌟 Well done! \n",
-    "In this notebook, you setup a running YugabyteDB cluster. You'r ready to move to the Lab."
+    "In this notebook, you setup a running YugabyteDB cluster locally on your MacOs. You'r ready to move to the Lab."
    ]
   }
  ],
@@ -364,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
