--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -10,16 +10,7 @@
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
     "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/).\n",
-    ">\n",
-    "\n",
-    "# Demystifying table sharding, tablets, and data distribution\n",
-    "As a distributed SQL database, YugabyteDB stores data differently than a stand-alone, monolithic  database. Because data is stored differently, YugabyteDB reads data differently as well.\n",
-    "\n",
-    "Like a monolithic relational databases, YugabyteDB stores data in tables. However, in YugabyteDB, a table consists of tablets. \n",
-    "\n",
-    "A tablet represents a table shard which contains a set of rows for the logical table. Each tablet is a customized RocksDB instance. A tablet leader has a peer group known as tablet followers, and this group of tablet peers exists as a Raft consensus group. YugabyteDB calls this distributed document store, DocDB.\n",
-    "\n",
-    "In this notebook, using Explain Plans, built-in functions, and custom utilities for YB-TServer metrics, you will learn how YugabyteDB stores data for a table in one or more tablets. You'll also dump the SST files for tablet in human-readable form so as to better understand how YugabyteDB stores data on disk. You will also learn how YugabyteDB reads tablet data during query execution.\n"
+    ">"
    ]
   },
   {
@@ -27,6 +18,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Demystifying table sharding, tablets, and data distribution\n",
+    "As a distributed SQL database, YugabyteDB stores data differently than a stand-alone, monolithic  database. Because data is stored differently, YugabyteDB reads and writes data differently as well.\n",
+    "\n",
+    "Like a monolithic relational databases, YugabyteDB stores data in tables. However, in YugabyteDB, a distributed database, a table consists of tablets. \n",
+    "\n",
+    "A tablet represents a table shard which contains a set of rows for the logical table. Tablets for a table often exists in a peer group of leader and followers. This group of tablet peers exists as a Raft consensus group. Each tablet is a customized RocksDB instance. RocksDB is a persistent key-value database. This architecture of a table existing as tablet peers in a Raft consensus group where each tablet is a customized RocksDB key-value database is called DocDB, Yugabyte's distributed document store.\n",
+    "\n",
+    "In this notebook, using Explain Plans, built-in functions, and custom utilities for YB-TServer metrics, you will learn:\n",
+    "- how YugabyteDB stores data for a table in one or more tablets using either hash consistent sharding or range sharding\n",
+    "- how YugabyteDB reads tablet data during query execution\n",
+    "- how data persist to disk as SST files\n",
+    "- the internals of SST files as both DocKey and SubDocKey"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🛠️ Requirements\n",
     "Here are the requirements for this notebook:\n",
     "- ✅ Create the notebook variables in `01_Lab_Setup.ipynb`, which you previously did\n",
     "- ✅ Create the `ds_ybu` database, which you previously did\n",
@@ -36,7 +47,29 @@
     "  -  Hash Sharding\n",
     "  -  Range Sharding\n",
     "  -  Comparing hash and range sharding\n",
-    "  -  Summary"
+    "  -  Summary\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Select your notebook kernel\n",
+    "- In the Notebook toolbar, click **Select Kernel**.\n",
+    "<br>\n",
+    "<img width=50% src=\"assets/01_01_Select_Kernel_Toolbar.png\" />\n",
+    "\n",
+    "- Next, in the dropdown, select **Python 3.8.13** or higher.\n",
+    "<br>\n",
+    "<img width=50% src=\"assets/01_02_Select_Kernel_Dropdown.png\" />\n",
+    "\n",
+    "That's it!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ⛑️ Getting help\n",
+    "The best way to get help from the Yugabyte University team is to post your question on YugabyteDB Community Slack in the #training or #yb-university channels. To sign up, visit [https://communityinviter.com/apps/yugabyte-db/register](https://communityinviter.com/apps/yugabyte-db/register)."
    ]
   },
   {
@@ -74,7 +107,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n",
     "# Use %store -r to read 01_Lab_Requirements_Setup variables\n",
     "%store -r MY_DB_NAME\n",
     "%store -r MY_YB_PATH\n",
@@ -91,6 +123,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -102,6 +135,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -128,6 +162,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,6 +182,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -154,6 +190,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -181,6 +218,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -202,6 +240,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -260,6 +299,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -292,6 +332,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -324,6 +365,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -384,6 +426,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -410,6 +453,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -421,6 +465,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -435,6 +480,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -454,6 +500,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -492,6 +539,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -536,6 +584,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -562,6 +611,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -590,6 +640,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -608,6 +659,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -619,6 +671,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -633,6 +686,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -655,6 +709,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -701,6 +756,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -733,6 +789,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -774,6 +831,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -800,6 +858,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -915,6 +974,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1029,6 +1089,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1097,6 +1158,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1107,6 +1169,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1114,6 +1177,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1150,6 +1214,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1178,6 +1243,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1198,6 +1264,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1223,6 +1290,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1253,6 +1321,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1286,6 +1355,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1316,6 +1386,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1325,6 +1396,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1348,6 +1420,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1357,6 +1430,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1390,6 +1464,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1420,6 +1495,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1430,6 +1506,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1445,6 +1522,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1478,6 +1556,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1511,6 +1590,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1521,6 +1601,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1539,6 +1620,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
