beta feature fix

--- a/00_Local_Only_Setup_MacOS.ipynb
+++ b/00_Local_Only_Setup_MacOS.ipynb
@@ -14,10 +14,11 @@
     "\n",
     "# Requirements to run this locally\n",
     "Here are the requirements to run this notebook locally:\n",
+    "\n",
     "- Download and install YugabyteDB\n",
     "- Update the `env_vars.env` file\n",
     "- Install Python 3.8 or higher\n",
-    "- \n",
+    "  \n",
     "## Download and install YugabyteDB\n",
     "To run this notebook locally in VS Code on MacOs or Linux, you must download and install YugabyteDB:\n",
     "### MacOS \n",
@@ -84,8 +85,11 @@
     "- To run the script, select Execute Cell (Play Arrow in the cell side bar).\n",
     "- Verify the accuracy of the output values\n",
     "\n",
-    "> About sudo and MacOS\n",
-    "> You'll need to supply your sudo password to create the loopback addresses."
+    "> About sudo and MacOS:\n",
+    "> \n",
+    "> You'll need to supply your sudo password to create the loopback addresses.\n",
+    ">\n",
+    "> "
    ]
   },
   {
@@ -105,7 +109,7 @@
     "### BEGIN: Edit your MY_SUDO\n",
     "\n",
     "# Leave it blank forcing a strategy for notebook execution\n",
-    "MY_SUDO=''\n",
+    "# MY_SUDO=''\n",
     "\n",
     "# Specify your sudo password in the cell\n",
     "#MY_SUDO='psswrd'\n",
@@ -113,8 +117,8 @@
     "# env_vars defines ENV_SUDO='psswrd'\n",
     "# MY_SUDO=os.environ.get('MY_SUDO')\n",
     "\n",
-    "# bash_profSile exports the variable, e.g., export GLOBAL_SUDO='psswrd' \n",
-    "# MY_SUDO=os.environ.get('GLOBAL_SUDO')\n",
+    "# bash_profile exports the variable, e.g., export GLOBAL_SUDO='psswrd' \n",
+    " MY_SUDO=os.environ.get('GLOBAL_SUDO')\n",
     "\n",
     "### END: MY_SUDO\n",
     "\n",
