--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -319,6 +319,11 @@
    "outputs": [],
    "source": [
     "%%sql /* explain plan */\n",
+    "-- beta feature enabled by default, so turning off\n",
+    "SET yb_enable_expression_pushdown=off;\n",
+    "SHOW yb_enable_expression_pushdown;\n",
+    "\n",
+    "\n",
     "execute stmt_util_metrics_snap_reset;\n",
     "explain (analyze, costs off, verbose, timing on) \n",
     "select '' _\n",
