--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -174,7 +174,7 @@
     "\n",
     "> IMPORTANT!\n",
     "> \n",
-    "> Do NOT skip running this cell. \n",
+    "> Do NOT skip running this cell.  The notebook variables, once assigned, persist. By desing, other notebooks will load these variables.\n",
     "> \n",
     "\n",
     "The following Python cell creates and stores variables that all the notebooks in this lab will use. You can view these variables in the Jupyter tab.\n",
